[gd_scene load_steps=9 format=3 uid="uid://bapqmfwrjvta1"]

[ext_resource type="FontFile" uid="uid://bgyv4uqm1jff5" path="res://fonts/Xolonium-Regular.ttf" id="1"]
[ext_resource type="Script" uid="uid://b7yqhvrkiaeu3" path="res://firstPage/firstPage.gd" id="2"]
[ext_resource type="AudioStream" uid="uid://bbe7vmojj2n5b" path="res://music/startover.wav" id="3"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("1"), ExtResource("1")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/64/0/ascent = 0.0
cache/0/64/0/descent = 0.0
cache/0/64/0/underline_position = 0.0
cache/0/64/0/underline_thickness = 0.0
cache/0/64/0/scale = 1.0

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("1"), ExtResource("1")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/64/0/ascent = 0.0
cache/0/64/0/descent = 0.0
cache/0/64/0/underline_position = 0.0
cache/0/64/0/underline_thickness = 0.0
cache/0/64/0/scale = 1.0

[sub_resource type="Shortcut" id="4"]

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("1"), ExtResource("1")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/64/0/ascent = 0.0
cache/0/64/0/descent = 0.0
cache/0/64/0/underline_position = 0.0
cache/0/64/0/underline_thickness = 0.0
cache/0/64/0/scale = 1.0

[sub_resource type="FontFile" id="6"]
fallbacks = Array[Font]([ExtResource("1"), ExtResource("1")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/64/0/ascent = 0.0
cache/0/64/0/descent = 0.0
cache/0/64/0/underline_position = 0.0
cache/0/64/0/underline_thickness = 0.0
cache/0/64/0/scale = 1.0

[node name="FirstPage" type="CanvasLayer"]
script = ExtResource("2")

[node name="Message" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -178.5
offset_top = 100.0
offset_right = 178.5
offset_bottom = 178.0
theme_override_fonts/font = SubResource("1")
theme_override_font_sizes/font_size = 64
text = "Aircraft Battle"
horizontal_alignment = 1

[node name="EasyButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.5
offset_top = -10.0
offset_right = 125.5
offset_bottom = 74.0
theme_override_fonts/font = SubResource("2")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("4")
text = "EASY"

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[node name="NormalButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -727.0
offset_right = 166.0
offset_bottom = -643.0
theme_override_fonts/font = SubResource("5")
theme_override_font_sizes/font_size = 64
text = "NORMAL"

[node name="HardButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.0
offset_top = 414.0
offset_right = 108.0
offset_bottom = 498.0
theme_override_fonts/font = SubResource("6")
theme_override_font_sizes/font_size = 64
text = "HARD"

[node name="StartOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3")

[connection signal="pressed" from="EasyButton" to="." method="_on_EasyButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="NormalButton" to="." method="_on_NormalButton_pressed"]
[connection signal="pressed" from="HardButton" to="." method="_on_HardButton_pressed"]
